--- a/raytracing.html
+++ b/raytracing.html
@@ -23,8 +23,8 @@ p { margin-left: 1.5em ; }
       Getting set up
     </h2>
     <p> First, you need to (separately) install <a href="http://www.povray.org/">POV-Ray</a> on your computer.  
-POV-Ray runs on Windows, Mac, and Linux.  However, support for modern Intel-based Macs seems to somewhat sketchy at present, and this extension has only been (lightly) tested on Windows and Linux. 
-	<p> Second, you need to edit the file <i>raytracing.config</i>, which is in the raytracing extension folder, and set the correct path to your installed POV-Ray program. 
+POV-Ray runs on Windows, Mac, and Linux.  However, support for modern Intel-based Macs seems to somewhat sketchy at present, and this extension has only been (lightly) tested on Windows and Linux. (Mac users may want to try the directions <a href="http://www.antonraves.com/megapov11_on_osx.html">here</a>, because the raytracing extension needs a version of POV-Ray that supports command line usage.)
+	<p> Second, you need to edit the file <i>raytracing.config.txt</i>, which is in the raytracing extension folder, and set the correct path to your installed POV-Ray program. 
     <h2>
       How to use
     </h2>
